--- a/SWE4U2/SWE4U2.vcxproj.filters
+++ b/SWE4U2/SWE4U2.vcxproj.filters
@@ -21,6 +21,27 @@
     <ClInclude Include="simulation.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="machine_a_event.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="machine_sim.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="machine_b_event.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="time_manipulation.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="buffer_event.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="sim_stats.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="machine_event.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
